--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.2'
     }
 }
 
@@ -35,8 +35,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core:1.3.0'
-    //implementation 'com.google.android.gms:play-services-auth:18.0.0'
-    //implementation files('D:/Programming/Android/Tools/Flutter_SDK/bin/cache/artifacts/engine/android-x64/flutter.jar')
+    implementation 'androidx.core:core:1.3.2'
+    implementation 'com.google.guava:guava:24.1-jre'
 
 }
